<resources>
    <string name="app_name">RSSKEE</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_home">Home</string>
    <string name="nav_favorite">Favorites</string>
    <string name="nav_saved_for_later">Saved For Later</string>
    <string name="rss_feed_picture" translatable="false">RSS Feed Picture</string>
    <string name="favorite_this_article">Favorite this article</string>
    <string name="save_this_article_for_later">Save this article for later</string>
    <string name="my_account">My Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="sign_in">Sign in</string>
    <string name="server_client_id" translatable="false">297262485743-0lhnb7fadne5t4248njnregoud8uaed6.apps.googleusercontent.com</string>
    <string name="sign_out">Sign Out</string>
    <string name="discover">Discover</string>
    <string name="facebook_app_id" translatable="false">2408429812767101</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb2408429812767101</string>
    <string name="my_feeds">My Feeds</string>
    <string name="featured_topics">Featured Topics</string>
    <string name="featured_articles">Featured Articles</string>
    <string name="topics">Topics</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="username_email">Username / Email</string>
    <string name="password">Password</string>
    <string name="Login_expired">Login expired, please logout and log back in</string>
    <string name="delete">Delete?</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete</string>
    <string name="cancel">Cancel</string>
    <string name="add_rss_feed_link">Add RSS Feed Link</string>
    <string name="adding_rss_feed">Adding RSS Feed…</string>
    <string name="rss_feed_added">RSS feed added</string>
    <string name="failed_to_add_link">Failed to add link</string>
    <string name="login_first">Login first(Menu -> My Account)</string>
    <string name="disconnected">Disconnected</string>
    <string name="feed_has_been_removed">Feed has been removed</string>
    <string name="share_via">Share via</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="pass_conf_missmatch">Password and confirmation mismatch</string>
    <string name="category_name">Category name</string>
    <string name="dark_mode">Dark mode</string>
    <string name="share">Share</string>
    <string name="authentificating">Authenticating...</string>
    <string name="visit_website">Visit Website</string>
    <string name="added_favorite">Added Favorite</string>
    <string name="article_saved_for_later">Article Saved For Later</string>
    <string name="add_favorite">Add Favorite</string>
    <string name="save_for_later">Save For Later</string>
    <string name="articles_read">Articles read:</string>
    <string name="no_network_available">No Network Available</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="creating_account">Creating Account...</string>
    <string name="at_least_3_characters">at least 3 characters</string>
    <string name="enter_a_valid_email">enter a valid email address</string>
    <string name="between_4_and_10_alphanum_char">between 4 and 10 alphanumeric characters</string>
    <string name="create_account">Create Account</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="name">Name</string>
    <string name="by">by</string>
    <string name="year_abv">y</string>
    <string name="days_abv">d</string>
    <string name="removed_favorite">Removed Favorite</string>
    <string name="article_saved">Article Saved</string>
    <string name="article_removed">Article removed</string>

</resources>
