<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_topics"
            android:icon="@drawable/ic_topic"
            android:title="@string/topics" />
        <item
            android:id="@+id/nav_discover"
            android:icon="@drawable/ic_discover"
            android:title="@string/discover" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_favorite"
            android:title="@string/nav_favorite" />
        <item
            android:id="@+id/nav_saved"
            android:icon="@drawable/ic_bookmark"
            android:title="@string/nav_saved_for_later" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_profile"
            android:title="@string/my_account" />
    </group>

</menu>